--- a/index.html
+++ b/index.html
@@ -8,23 +8,26 @@
   <body>
     <header>
       <nav>
-        <a href="#"><img src="./imgs/logo.svg" alt="лого Сучасна пекарня" /></a>
+        <a href="/">
+          <img src="./imgs/logo.svg" alt="лого Сучасна пекарня" />
+        </a>
         <ul>
-          <li><a href="#">Наші традиції</a></li>
-          <li><a href="#">Шеф-кухарі</a></li>
-          <li><a href="#">Формати</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li><a href="#traditions-section">Наші традиції</a></li>
+          <li><a href="#chef-section">Шеф-кухарі</a></li>
+          <li><a href="#formats-section">Формати</a></li>
+          <li><a href="#contact-section">Контакти</a></li>
         </ul>
         <button type="button">Замовити дзвінок</button>
       </nav>
     </header>
+
     <main>
       <!--1-->
       <section>
         <h1>Сучасна <span>пекарня</span></h1>
       </section>
       <!--2-->
-      <section>
+      <section id="traditions-section">
         <ul>
           <li>Великий попит на ринку</li>
           <li>Доступні за бюджетом формати</li>
@@ -46,7 +49,7 @@
         />
       </section>
       <!--3-->
-      <section>
+      <section id="chef-section">
         <h2>Наші найкращі <span>шеф -кухарі</span></h2>
         <ul>
           <li>
@@ -71,7 +74,7 @@
         </ul>
       </section>
       <!--4-->
-      <section>
+      <section id="formats-section">
         <h2>Формати</h2>
         <ul>
           <li>
@@ -108,10 +111,19 @@
         </ul>
       </section>
       <!--5-->
-      <section>
+      <section id="contact-section">
         <h2>Приєднуйся до мережі пекарень</h2>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1634470361723!2d30.488698376829465!3d50.45668098691466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2sSichovykh%20Striltsiv%20St%2C%2054%2C%20Kyiv%2C%20Ukraine%2C%2002000!5e0!3m2!1sen!2spl!4v1731944099267!5m2!1sen!2spl"
+          width="603"
+          height="595"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
       </section>
     </main>
+
     <footer>
       <nav>
         <a href="#"><img src="./imgs/logo.svg" alt="лого Сучасна пекарня" /></a>
@@ -121,7 +133,7 @@
           <li><a href="#">Формати</a></li>
           <li><a href="#">Контакти</a></li>
         </ul>
-        <!-- call -->
+        <button type="button">Замовити дзвінок</button>
       </nav>
       <address>
         <ul>
@@ -141,6 +153,8 @@
             <a href="#"><!--ig--></a>
           </li>
         </ul>
+        <a href="#" target="_blank">Політика конфіденційності</a>
+        <p>&copy; 2022 Дані захищені</p>
       </address>
     </footer>
   </body>
