--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Сучасна пекарня</title>
   </head>
   <body>
@@ -12,28 +13,36 @@
           <img src="./imgs/logo.svg" alt="лого Сучасна пекарня" />
         </a>
         <ul>
-          <li><a href="#traditions-section">Наші традиції</a></li>
-          <li><a href="#chef-section">Шеф-кухарі</a></li>
-          <li><a href="#formats-section">Формати</a></li>
-          <li><a href="#contact-section">Контакти</a></li>
+          <li>
+            <a class="link" href="#traditions-section">Наші традиції</a>
+          </li>
+          <li>
+            <a class="link" href="#chef-section">Шеф-кухарі</a>
+          </li>
+          <li>
+            <a class="link" href="#formats-section">Формати</a>
+          </li>
+          <li>
+            <a class="link" href="#contact-section">Контакти</a>
+          </li>
         </ul>
-        <button type="button">Замовити дзвінок</button>
+        <button class="button" type="button">Замовити дзвінок</button>
       </nav>
     </header>
 
     <main>
       <!--1-->
       <section>
-        <h1>Сучасна <span>пекарня</span></h1>
+        <h1 class="hero-title"><span class="accent">Сучасна</span> пекарня</h1>
       </section>
       <!--2-->
       <section id="traditions-section">
-        <ul>
+        <ul class="advantages-list">
           <li>Великий попит на ринку</li>
           <li>Доступні за бюджетом формати</li>
           <li>Досвідчена управлінська команда</li>
         </ul>
-        <h2>Новий формат традицій</h2>
+        <h2 class="section-title">Новий формат традицій</h2>
         <p>
           <span>shop bakery</span> — це пекарня, яка взяла все найкраще, і
           зберегла смак традиційної випічки та натуральність інгредієнтів.
@@ -50,7 +59,9 @@
       </section>
       <!--3-->
       <section id="chef-section">
-        <h2>Наші найкращі <span>шеф -кухарі</span></h2>
+        <h2 class="section-title">
+          Наші найкращі <span class="accent">шеф-кухарі</span>
+        </h2>
         <ul>
           <li>
             <article>
@@ -75,7 +86,7 @@
       </section>
       <!--4-->
       <section id="formats-section">
-        <h2>Формати</h2>
+        <h2 class="section-title">Формати</h2>
         <ul>
           <li>
             <article>
@@ -112,7 +123,7 @@
       </section>
       <!--5-->
       <section id="contact-section">
-        <h2>Приєднуйся до мережі пекарень</h2>
+        <h2 class="section-title">Приєднуйся до мережі пекарень</h2>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1634470361723!2d30.488698376829465!3d50.45668098691466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2sSichovykh%20Striltsiv%20St%2C%2054%2C%20Kyiv%2C%20Ukraine%2C%2002000!5e0!3m2!1sen!2spl!4v1731944099267!5m2!1sen!2spl"
           width="603"
@@ -133,7 +144,7 @@
           <li><a href="#">Формати</a></li>
           <li><a href="#">Контакти</a></li>
         </ul>
-        <button type="button">Замовити дзвінок</button>
+        <button class="button" type="button">Замовити дзвінок</button>
       </nav>
       <address>
         <ul>
